--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/nicolashenschel/restAPImongodb/issues"
   },
-  "homepage": "https://github.com/nicolashenschel/restAPImongodb#readme"
+  "homepage": "https://github.com/nicolashenschel/restAPImongodb#readme",
+  "dependencies": {
+    "express": "^4.16.2",
+    "mongoose": "^5.0.1"
+  }
 }
